[package]
name = "b15f"
version = "0.1.0"
edition = "2021"
description = "A Rust port of the B15F client"
license = "MIT"
authors = [
    "Phyrone <phyrone@phyrone.de>",
]
readme = "README.md"
repository = "https://github.com/Phyrone/b15f-rs"


[dependencies]
serialport = "4.3.0"
thiserror = "1.0.61"
tracing = { version = "0.1.40", features = ["log"] }
rand = "0.9.0-alpha.1"
log = { version = "0.4.22", optional = true }
bitflags = { version = "2.6.0", features = ["std"], optional = true }

[features]
default = ["log", "experimental"]
experimental = ["bitflags"]